[package]
name = "bpp-command-api"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread", "sync"] }
async-trait = "0.1.51"
chrono = "0.4.19"
lazy_static = "1.4.0"
custom_error = "1.9.2"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
dyn-clone = "1.0.4"
tonic = "0.5.2"
prost = "0.8.0"
prost-types = "0.8.0"

[build-dependencies]
rustc_version = "0.4.0"
tonic-build = "0.5.2"